@@ -18,6 +18,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #10768: Make the Tkinter ScrolledText widget work again.
+
 - Issue #10777: Fix "dictionary changed size during iteration" bug in
   ElementTree register_namespace().
 
